<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	          android:orientation="vertical" 
	          android:layout_width="fill_parent"
	          android:layout_height="fill_parent">
	          
    <LinearLayout style="@style/TitleBar"> 
        <ImageView style="@style/TitleBarLogo"
                   android:contentDescription="DESCRIPTION LOGO"
                   android:src="@drawable/refund" />
		<TextView android:id="@+id/textView1" 
		          android:text="@string/despact_despesa" 
		          style="@style/TitleBarFont"
		          android:layout_toRightOf="@+id/refundIco" 
		          android:layout_alignTop="@+id/refundIco" 
		          android:layout_alignBottom="@+id/refundIco" 
		          android:gravity="bottom"
		          android:padding="3sp" 
		          android:layout_gravity="center"/>
        <View style="@style/TitleBarSpring" />
    </LinearLayout>
	<ScrollView android:id="@+id/scrollView01"
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content"
		        android:layout_weight="1" 
		        android:layout_alignParentTop="true"
		        android:padding="3sp">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			          android:orientation="vertical" 
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content">
			          
			 <TextView style="@style/TitleFont.Medium"
			          android:text="@string/vmain_descricao"
			          android:id="@+id/txtDescricao"/>
			<EditText android:id="@+id/editTextDescricao"
			          android:layout_width="fill_parent"
				      android:layout_height="wrap_content"
			          android:hint="@string/vmain_descricao"/>
			          
			 <TextView style="@style/TitleFont.Medium"
			          android:text="@string/vmain_valor"
			          android:id="@+id/txtValor"/>
			<EditText android:id="@+id/editTextValor"
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content"
   					  android:digits="@string/reemb_decimalDigits"
  					  android:inputType="numberDecimal" 
			          android:hint="@string/vmain_valor"/>
			          
			<TextView style="@style/TitleFont.Medium"
			          android:text="@string/vmain_tipo"
			          android:id="@+id/txtSpinnerTipo"/>
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				          android:orientation="horizontal" 
				          android:layout_width="fill_parent"
				          android:layout_height="wrap_content">
				<Spinner android:id="@+id/spinTipos"
			             android:layout_width="fill_parent"
			             android:layout_height="wrap_content" 
			             android:prompt="@string/vmain_tipo"/>
				<ImageView android:src="@android:drawable/ic_menu_add"
				           android:layout_alignParentRight="true"
				           android:id="@+id/novoTipo"
				           android:clickable="true"
				           android:layout_alignParentTop="true"
				           android:layout_gravity="right|center"
			               android:layout_width="wrap_content"
			               android:layout_height="wrap_content"
			               android:visibility="invisible"/>
			</LinearLayout>
			
			<TextView style="@style/TitleFont.Medium"
			          android:text="@string/vmain_data"
			          android:id="@+id/txtDtDespesa"/>
			<Button android:id="@+id/btnDtDespesa" 
				    android:layout_width="fill_parent" 
			        android:layout_height="wrap_content"/>
			        
			<TextView style="@style/TitleFont.Medium"
			          android:text="@string/vmain_viagem"
		              android:id="@+id/txtSpinViagens"/>
			<Spinner android:id="@+id/spinViagens"
				     android:layout_width="fill_parent"
				     android:layout_height="wrap_content"
			         android:prompt="@string/vmain_viagem"/>
			         
		</LinearLayout>
	</ScrollView>
	
	<LinearLayout android:id="@+id/linLayoutSpacer"
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content"
	              android:orientation="vertical"
	              android:background="@color/GRAY"
	              android:padding="3sp">
		<LinearLayout android:id="@+id/linLayoutButtons"
			          android:layout_width="fill_parent" 
			          android:layout_height="fill_parent"
			          android:orientation="horizontal">
			<Button android:text="@string/vmain_env_despesa" 
	                android:id="@+id/btnSendDepesa"
				    android:visibility="visible"
				    android:layout_width="0sp" 
				    android:layout_height="wrap_content"
				    android:layout_gravity="center" 
				    android:layout_weight="0.3"
				    android:onClick="onSendDespesaClick"/>
			<Button android:text="@string/vmain_exc_despesa" 
			        android:id="@+id/btnExcluirDespesa"
				    android:visibility="visible"
				    android:layout_width="0sp" 
				    android:layout_height="wrap_content"
				    android:layout_gravity="center" 
				    android:layout_weight="0.3"
				    android:enabled="false"
				    android:onClick="onDeleteDespesaClick"/>
			<Button android:text="@string/vmain_cancelar" 
			        android:id="@+id/btnCancelar"
				    android:visibility="visible"
				    android:layout_width="0sp" 
				    android:layout_height="wrap_content"
				    android:layout_gravity="center" 
				    android:layout_weight="0.3"
				    android:enabled="false"
				    android:onClick="onCancelDespesaClick"/>
		</LinearLayout>
	</LinearLayout>

	<!--
	<LinearLayout android:id="@+id/buttons"
		          android:orientation="horizontal" 
		          android:layout_width="fill_parent"
		          android:layout_height="wrap_content" 
		          android:layout_alignParentBottom="true">

		<com.admob.android.ads.AdView android:id="@+id/ad"
			                          android:layout_width="fill_parent" 
			                          android:layout_height="wrap_content"/>
	</LinearLayout>
	-->
	
</LinearLayout>